infrastructure/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airframe-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airframe-postgres
  template:
    metadata:
      labels:
        app: airframe-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: airframe-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: airframe-postgres
spec:
  selector:
    app: airframe-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
